[gd_scene load_steps=3 format=3 uid="uid://di63y6nrjoees"]

[ext_resource type="Script" uid="uid://cp8s5irw8uwst" path="res://levels/run/scenes/menu.gd" id="1_r2dod"]
[ext_resource type="PackedScene" uid="uid://c0bh00c8l4uko" path="res://assets/scenes/menu_button.tscn" id="3_86utd"]

[node name="Menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2dod")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -174.0
offset_right = -92.0
offset_bottom = 226.0
grow_horizontal = 0
grow_vertical = 2

[node name="Restore" parent="Buttons" instance=ExtResource("3_86utd")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 59.0
offset_top = 50.0
offset_right = 339.0
offset_bottom = 106.0
grow_horizontal = 1
grow_vertical = 1
rotation = -0.12217305
metadata/color = Color(0, 0.827451, 0.105882354, 0.79607844)

[node name="Label" parent="Buttons/Restore" index="0"]
text = "Restore"

[node name="Restart" parent="Buttons" instance=ExtResource("3_86utd")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -84.0
offset_right = 40.0
offset_bottom = -28.0
grow_horizontal = 0
rotation = -0.12217305
metadata/color = Color(0.92156863, 0, 0.29803923, 1)
metadata/type = 1

[node name="Label" parent="Buttons/Restart" index="0"]
text = "Restart"

[node name="Exit" parent="Buttons" instance=ExtResource("3_86utd")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -24.0
offset_right = 40.0
offset_bottom = 32.0
grow_horizontal = 0
rotation = -0.12217305
metadata/color = Color(0.92156863, 0, 0.29803923, 0.79607844)
metadata/type = 2

[node name="Label" parent="Buttons/Exit" index="0"]
text = "Exit"

[connection signal="pressed" from="Buttons/Restore" to="." method="_on_restore_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]

[editable path="Buttons/Restore"]
[editable path="Buttons/Restart"]
[editable path="Buttons/Exit"]
